@@ -3,6 +3,9 @@ Changelog for Processeditor
 
 Todo: Work on #40 (Server: Implement EmumerationDialogEditor)
 
+2023-11-07
+* Added executePostRequest() in JSONHttpRequest
+
 2023-07-24
 * Added executeDeleteRequest() in JSONHttpRequest
 
